--- a/styles/global.scss
+++ b/styles/global.scss
@@ -7,8 +7,8 @@
 }
 
 html {
-	color: #FFFFFF;
-	background-color: #000000;
+	color: #000000;
+	background-color: #ffffff;
 	height: 100%;
 	line-height: 1.15;
 	-ms-text-size-adjust: 100%;
@@ -16,11 +16,16 @@ html {
 }
 
 body {
-  background: #000000;
-  font-size: 100%;
-  font-family: 'Heebo', sans-serif;
+  background: #ffffff;
+	font-size: 100%;
+	font-size: 16px;
+  font-family: 'Avenir', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
   font-weight: 100;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Avenir', sans-serif;
 }
