Other integrated with Prismic

--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -43,7 +43,7 @@
       url('/static/fonts/AkzidenzGroteskBE-Md.ttf') format('truetype'),
       url('/static/fonts/AkzidenzGroteskBE-Md.svg#AkzidenzGroteskBE-Md') format('svg');
   font-weight: 500;
-  font-style: normal;
+  font-style: bold;
 }
 
 @font-face {
